--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,40 @@ dependencies:
   flutter_bloc: ^8.1.4
   cupertino_icons: ^1.0.6
   freezed: ^2.4.7
+  dio: ^5.4.1
+  intl: ^0.19.0
+  slang: ^3.30.1
+  slang_flutter: ^3.30.0
+  freezed_annotation: ^2.4.1
+  shared_preferences: ^2.2.2
+  collection: ^1.18.0
+  crypto: ^3.0.3
+  uni_links: ^0.5.1
+  url_launcher: ^6.2.5
+  bloc_test: ^9.1.6
+  path_provider: ^2.1.2
+  open_filex: ^4.4.0
+  platform_device_id: ^1.0.1
+  flutter_vibrate: ^1.3.0
+  sliver_tools: ^0.2.12
+  font_awesome_flutter: ^10.7.0
+  country_flags: ^2.2.0
+  device_info_plus: ^9.1.2
+  uuid: ^4.3.3
+  vibration: ^1.8.4
+  fluro: ^2.0.5
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  lints: ^3.0.0
   build_runner: ^2.4.8
+  drift_dev: ^2.16.0
+  slang_build_runner: ^3.30.0
   build_test: ^2.2.2
 
 
