--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   cupertino_icons: ^1.0.6
   freezed: ^2.4.7
-  dio: ^5.4.1
+  dio: ^5.4.2
   intl: ^0.19.0
-  slang: ^3.30.1
+  slang: ^3.30.2
   slang_flutter: ^3.30.0
   freezed_annotation: ^2.4.1
   shared_preferences: ^2.2.2
@@ -24,7 +24,7 @@ dependencies:
   crypto: ^3.0.3
   uni_links: ^0.5.1
   url_launcher: ^6.2.5
-  bloc_test: ^9.1.6
+  bloc_test: ^9.1.7
   path_provider: ^2.1.2
   open_filex: ^4.4.0
   platform_device_id: ^1.0.1
@@ -32,21 +32,23 @@ dependencies:
   sliver_tools: ^0.2.12
   font_awesome_flutter: ^10.7.0
   country_flags: ^2.2.0
-  device_info_plus: ^9.1.2
+  device_info_plus: ^10.0.1
   uuid: ^4.3.3
   vibration: ^1.8.4
   fluro: ^2.0.5
   flutter_emoji: ^2.5.1
   demoji: ^2.0.0
   cached_network_image: ^3.3.1
-
+  drift: ^2.16.0
+  sqlite3_flutter_libs: ^0.5.20
+  path: ^1.9.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.2
   lints: ^3.0.0
   build_runner: ^2.4.8
   drift_dev: ^2.16.0
