--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: passguard
 description: "pass management app"
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -12,36 +12,38 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^8.1.5
-  cupertino_icons: ^1.0.6
-  freezed: ^2.4.7
-  dio: ^5.4.2
+  cupertino_icons: ^1.0.8
+  freezed: ^2.5.2
+  dio: ^5.4.3+1
   intl: ^0.19.0
   slang: ^3.30.2
   slang_flutter: ^3.30.0
   freezed_annotation: ^2.4.1
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.3
   collection: ^1.18.0
   crypto: ^3.0.3
   uni_links: ^0.5.1
-  url_launcher: ^6.2.5
+  url_launcher: ^6.2.6
   bloc_test: ^9.1.7
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
   open_filex: ^4.4.0
   platform_device_id: ^1.0.1
   flutter_vibrate: ^1.3.0
   sliver_tools: ^0.2.12
   font_awesome_flutter: ^10.7.0
   country_flags: ^2.2.0
-  device_info_plus: ^10.0.1
-  uuid: ^4.3.3
+  device_info_plus: ^10.1.0
+  uuid: ^4.4.0
   vibration: ^1.8.4
   fluro: ^2.0.5
   flutter_emoji: ^2.5.1
   demoji: ^2.0.0
   cached_network_image: ^3.3.1
-  drift: ^2.16.0
-  sqlite3_flutter_libs: ^0.5.20
+  drift: ^2.18.0
+  sqlite3_flutter_libs: ^0.5.21
   path: ^1.9.0
+  encrypt: ^5.0.3
+  pointycastle: ^3.9.1
 
 
 dev_dependencies:
@@ -50,8 +52,8 @@ dev_dependencies:
 
   flutter_lints: ^3.0.2
   lints: ^3.0.0
-  build_runner: ^2.4.8
-  drift_dev: ^2.16.0
+  build_runner: ^2.4.9
+  drift_dev: ^2.18.0
   slang_build_runner: ^3.30.0
   build_test: ^2.2.2
 
@@ -60,19 +62,5 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  assets:
+    - assets/public.pem
